# go-neural

./: go.mod  go.sum  main.go  pyproject.toml
constants/: ops.go
core/: layer.go  mlp.go  neuron.go
logger/: logger.go
python/: matrix_multiplication.py
tensor/: errors.go  ops.go  tensor.go
