[tool.poetry]
name = "go-neural"
version = "0.1.0"
description = "Neural network implementation in Go with Python testing"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tensorflow = "^2.20.0"
pandas = "^2.3.3"
numpy = "^2.4.1"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
